; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_list.c_listTypePush.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_list.c_listTypePush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64, i32 }

@OBJ_ENCODING_QUICKLIST = common dso_local global i64 0, align 8
@LIST_HEAD = common dso_local global i32 0, align 4
@QUICKLIST_HEAD = common dso_local global i32 0, align 4
@QUICKLIST_TAIL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Unknown list encoding\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @listTypePush(%struct.TYPE_7__* %0, %struct.TYPE_7__* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @OBJ_ENCODING_QUICKLIST, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %41

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* @LIST_HEAD, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = load i32, i32* @QUICKLIST_HEAD, align 4
  br label %22

20:                                               ; preds = %14
  %21 = load i32, i32* @QUICKLIST_TAIL, align 4
  br label %22

22:                                               ; preds = %20, %18
  %23 = phi i32 [ %19, %18 ], [ %21, %20 ]
  store i32 %23, i32* %7, align 4
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %25 = call %struct.TYPE_7__* @getDecodedObject(%struct.TYPE_7__* %24)
  store %struct.TYPE_7__* %25, %struct.TYPE_7__** %5, align 8
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = call i64 @sdslen(i32 %28)
  store i64 %29, i64* %8, align 8
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 8
  %36 = load i64, i64* %8, align 8
  %37 = load i32, i32* %7, align 4
  %38 = call i32 @quicklistPush(i32 %32, i32 %35, i64 %36, i32 %37)
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %40 = call i32 @decrRefCount(%struct.TYPE_7__* %39)
  br label %43

41:                                               ; preds = %3
  %42 = call i32 @serverPanic(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %43

43:                                               ; preds = %41, %22
  ret void
}

declare dso_local %struct.TYPE_7__* @getDecodedObject(%struct.TYPE_7__*) #1

declare dso_local i64 @sdslen(i32) #1

declare dso_local i32 @quicklistPush(i32, i32, i64, i32) #1

declare dso_local i32 @decrRefCount(%struct.TYPE_7__*) #1

declare dso_local i32 @serverPanic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
